@@ -14,7 +14,8 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.jsonwebtoken</groupId>
@@ -95,16 +96,16 @@
         <jjwt.root>${basedir}</jjwt.root>
         <jjwt.previousVersion>0.11.2</jjwt.previousVersion>
 
-        <maven.jar.version>3.3.0</maven.jar.version>
-        <maven.compiler.version>3.11.0</maven.compiler.version>
-        <maven.javadoc.version>3.6.3</maven.javadoc.version>
-        <maven.source.version>3.2.1</maven.source.version>
-        <maven.resources.version>3.1.0</maven.resources.version>
-        <maven.gpg.version>3.1.0</maven.gpg.version>
-        <maven.japicmp.version>0.15.6</maven.japicmp.version>
+        <maven.jar.version>3.4.2</maven.jar.version>
+        <maven.compiler.version>3.14.0</maven.compiler.version>
+        <maven.javadoc.version>3.11.3</maven.javadoc.version>
+        <maven.source.version>3.3.1</maven.source.version>
+        <maven.resources.version>3.3.1</maven.resources.version>
+        <maven.gpg.version>3.2.8</maven.gpg.version>
+        <maven.japicmp.version>0.23.1</maven.japicmp.version>
         <maven.toolchains.version>3.2.0</maven.toolchains.version>
-        <gmavenplus.version>4.2.0</gmavenplus.version>
-        <maven.license.version>4.2.rc3</maven.license.version>
+        <gmavenplus.version>4.2.1</gmavenplus.version>
+        <maven.license.version>4.6</maven.license.version>
         <maven.license.skipExistingHeaders>true</maven.license.skipExistingHeaders>
 
         <!-- Source/bytecode compatibility target for the compiled library.
@@ -123,9 +124,9 @@
         <skip.default.tests>false</skip.default.tests>
         <buildNumber>${user.name}-${maven.build.timestamp}</buildNumber>
 
-        <jackson.version>2.12.7.1</jackson.version>
-        <orgjson.version>20231013</orgjson.version>
-        <gson.version>2.11.0</gson.version>
+        <jackson.version>2.19.2</jackson.version>
+        <orgjson.version>20250517</orgjson.version>
+        <gson.version>2.13.1</gson.version>
 
         <maven.javadoc.additionalOptions />
         <!-- Optional Runtime Dependencies: -->
@@ -135,12 +136,12 @@
 
         <!-- Test Dependencies: Only required for testing when building.  Not required by users at runtime: -->
         <groovy.version>4.0.31</groovy.version>
-        <easymock.version>4.2</easymock.version>
-        <junit.version>4.12</junit.version>
-        <powermock.version>2.0.7</powermock.version>
+        <easymock.version>5.6.0</easymock.version>
+        <junit.version>4.13.2</junit.version>
+        <powermock.version>2.0.9</powermock.version>
         <failsafe.plugin.version>3.1.2</failsafe.plugin.version>
         <surefire.plugin.version>3.1.2</surefire.plugin.version>
-        <clover.version>4.3.1</clover.version>
+        <clover.version>4.5.2</clover.version>
         <clover.db>${jjwt.root}/target/clover/clover.db</clover.db>
         <!-- Default surefire argLine for JDK 17 (the required build JDK).
              Individual jdk-N profiles override this for their toolchain executions. -->
@@ -150,6 +151,7 @@
             --add-opens java.base/java.lang=ALL-UNNAMED, <!-- Needed by EasyMock/cglib -->
             --add-opens java.desktop/java.beans=ALL-UNNAMED, <!-- Needed by EasyMock/cglib -->
             --add-opens java.base/java.lang.ref=ALL-UNNAMED, <!-- Needed by PowerMock -->
+            --add-opens java.base/java.security=ALL-UNNAMED, <!-- Needed by TestProvider.groovy on JDK 17 or later -->
             <!-- needed by KeysImplTest.testKeyPairFor, KeysTest.testDeprecatedKeyPairFor, and
                  KeysTest.testKeyPairBuilder: -->
             --add-opens java.base/sun.security.util=ALL-UNNAMED
@@ -259,7 +261,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -270,12 +272,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>2.5.3</version>
+                    <version>3.1.1</version>
                     <dependencies>
                         <dependency>
                             <groupId>org.apache.maven.scm</groupId>
                             <artifactId>maven-scm-provider-gitexe</artifactId>
-                            <version>1.9.5</version>
+                            <version>2.1.0</version>
                         </dependency>
                     </dependencies>
                     <configuration>
@@ -377,7 +379,7 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <source>${jdk.version}</source>
+                        <release>${jdk.version}</release>
                         <failOnError>true</failOnError>
                         <failOnWarnings>false</failOnWarnings>
                         <additionalOptions>-html5 ${maven.javadoc.additionalOptions}</additionalOptions>
@@ -477,7 +479,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
-                    <version>3.2.1</version>
+                    <version>3.6.0</version>
                     <configuration>
                         <shadedClassifierName>deprecated</shadedClassifierName>
                         <shadedArtifactAttached>true</shadedArtifactAttached>
@@ -506,7 +508,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.4.1</version>
+                <version>3.6.1</version>
                 <executions>
                     <execution>
                         <id>enforce-banned-dependencies</id>
@@ -585,7 +587,9 @@
                 <version>${surefire.plugin.version}</version>
                 <configuration>
                     <argLine>${surefire.argLine}</argLine>
-                    <forkMode>once</forkMode>
+                    <!-- Next two lines replace 'forkMode', removed in maven-surefire-plugin version 3.0.0-M8: -->
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
                     <skip>${skip.default.tests}</skip>
                 </configuration>
             </plugin>
@@ -625,7 +629,7 @@
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.8</version>
+                <version>1.6.14</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
@@ -636,7 +640,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>5.1.9</version>
                 <executions>
                     <execution>
                         <id>bundle-manifest</id>
@@ -741,7 +745,9 @@
                                     </jdkToolchain>
                                     <!-- No add-opens flags on JDK 8 -->
                                     <argLine></argLine>
-                                    <forkMode>once</forkMode>
+                                    <!-- Next two lines replace 'forkMode', removed in maven-surefire-plugin version 3.0.0-M8: -->
+                                    <forkCount>1</forkCount>
+                                    <reuseForks>true</reuseForks>
                                 </configuration>
                             </execution>
                         </executions>
